@@ -3448,13 +3448,17 @@ name|dirPath
 operator|.
 name|endsWith
 argument_list|(
-literal|"/"
+name|File
+operator|.
+name|separator
 argument_list|)
 condition|)
 block|{
 name|dirPath
 operator|+=
-literal|"/"
+name|File
+operator|.
+name|separator
 expr_stmt|;
 block|}
 if|if
