@@ -1570,6 +1570,17 @@ expr_stmt|;
 block|}
 finally|finally
 block|{
+name|FileUtil
+operator|.
+name|chmod
+argument_list|(
+name|sdRootPath
+argument_list|,
+literal|"+w"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
 name|assertTrue
 argument_list|(
 name|storage
@@ -1581,17 +1592,6 @@ name|contains
 argument_list|(
 name|sd
 argument_list|)
-argument_list|)
-expr_stmt|;
-name|FileUtil
-operator|.
-name|chmod
-argument_list|(
-name|sdRootPath
-argument_list|,
-literal|"+w"
-argument_list|,
-literal|true
 argument_list|)
 expr_stmt|;
 block|}
@@ -2702,6 +2702,8 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|FSEditLogOp
 name|op
 init|=
@@ -2722,6 +2724,19 @@ argument_list|,
 literal|5
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|elis
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|/**    * Make sure that in-progress streams aren't counted if we don't ask for    * them.    */
 annotation|@
@@ -2830,6 +2845,8 @@ argument_list|,
 literal|false
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|FSEditLogOp
 name|lastReadOp
 init|=
@@ -2857,6 +2874,19 @@ name|getTransactionId
 argument_list|()
 operator|<=
 literal|100
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+name|elis
 argument_list|)
 expr_stmt|;
 block|}
