@@ -951,7 +951,13 @@ name|FileUtil
 operator|.
 name|chmod
 argument_list|(
+operator|new
+name|File
+argument_list|(
 name|failedNameDir
+argument_list|,
+literal|"current"
+argument_list|)
 operator|.
 name|getAbsolutePath
 argument_list|()
@@ -1133,13 +1139,19 @@ argument_list|(
 operator|new
 name|File
 argument_list|(
+operator|new
+name|File
+argument_list|(
 name|dir
 argument_list|)
+argument_list|,
+literal|"current"
+argument_list|)
 operator|.
-name|toString
+name|getAbsolutePath
 argument_list|()
 argument_list|,
-literal|"700"
+literal|"755"
 argument_list|)
 expr_stmt|;
 block|}
